# yolo_triton_ws

./: .gitignore  README.md
src/: CMakeLists.txt
src/yolo/: CMakeLists.txt  package.xml
src/yolo/src/: yolo_client.cpp
